deploy/volumes/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15001

static_resources:
  listeners:
    - name: listener_app
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: [ "*" ]
                    routes:
                      - match: { prefix: "/v1/clientCard/" }
                        route: { cluster: training-service, prefix_rewrite: "/v1/client-card/" }
                      - match: { prefix: "/v2/clientCard/" }
                        route: { cluster: training-service, prefix_rewrite: "/v2/client-card/" }
                      - match: { prefix: "/v1/trainingPlan/" }
                        route: { cluster: training-service, prefix_rewrite: "/v1/training-plan/" }
                      - match: { prefix: "/v2/trainingPlan/" }
                        route: { cluster: training-service, prefix_rewrite: "/v2/training-plan/" }

                      - match: { path: "/admin" }
                        redirect: { path_redirect: "/admin/", https_redirect: false }
                      - match: { prefix: "/admin/" }
                        route: { cluster: keycloak }
                      - match: { prefix: "/realms/" }
                        route: { cluster: keycloak }
                      - match: { prefix: "/resources/" }
                        route: { cluster: keycloak }
              http_filters:
                - name: envoy.filters.http.jwt_authn
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                    providers:
                      keycloak_provider:
                        issuer: "http://localhost:8080/realms/fit-bridge"
                        audiences: [ "fit-bridge-service" ]
                        remote_jwks:
                          http_uri:
                            uri: http://keycloak:8080/realms/fit-bridge/protocol/openid-connect/certs
                            cluster: keycloak
                            timeout: 5s
                          cache_duration:
                            seconds: 300
                        forward: true
                        forward_payload_header: x-jwt-payload
                    rules:
                      - match: { prefix: /v1/clientCard/ }
                        requires: { provider_name: keycloak_provider }
                      - match: { prefix: /v2/clientCard/ }
                        requires: { provider_name: keycloak_provider }
                      - match: { prefix: /v1/trainingPlan/ }
                        requires: { provider_name: keycloak_provider }
                      - match: { prefix: /v2/trainingPlan/ }
                        requires: { provider_name: keycloak_provider }
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: training-service
      connect_timeout: 30s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: training-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: training-service
                      port_value: 8081

    - name: keycloak
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080
